# Lab3

./: README.md
Step1/MATLAB/: ECE569_AxisAng3.m  ECE569_MatrixLog3.m  ECE569_VecToso3.m  ECE569_so3ToVec.m  Lab3_StarterCode.mlx
ws3/: frames_2025-10-19_12.10.51.gv
ws3/install/: local_setup.sh  setup.sh
ws3/install/metafly_description/lib/metafly_description/: metafly_tf_pub
ws3/install/metafly_description/share/metafly_description/: package.sh  package.xml
ws3/install/metafly_description/share/metafly_description/launch/: metafly.launch.py
ws3/install/metafly_description/share/metafly_description/resource/: metafly_description  mocap_data.csv
ws3/install/metafly_description/share/metafly_description/rviz/: metafly.rviz
ws3/install/metafly_description/share/metafly_description/urdf/: materials.xacro  metafly.urdf.xacro  metafly_macro.xacro
ws3/log/: latest_build
ws3/src/metafly_description/: package.xml  setup.py
ws3/src/metafly_description/launch/: metafly.launch.py
ws3/src/metafly_description/metafly_description/: metafly_tf_pub.py
